--- a/wa.user.css
+++ b/wa.user.css
@@ -6,14 +6,14 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      2.16.3
+@version      2.16.4
 @license      MIT
 ==/UserStyle== */
 
 @-moz-document domain('web.whatsapp.com') {
   :root:not(#z),
   .dark:not(#z) {
-    --version: 'Dark-WhatsApp Lite 2.16.3 — July 24th, 2020';
+    --version: 'Dark-WhatsApp Lite 2.16.4 — July 25th, 2020';
     --message: 'Towards v3 of DWA! Updating to `2.2029.4` of WhatsApp Web; check the changelog to see what is new!';
     --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
     --ui-font: 'font_name', Segoe UI, Helvetica Neue, Helvetica, Lucida Grande, Arial, Ubuntu, Cantarell, Fira Sans, sans-serif !important;
@@ -199,8 +199,8 @@
     --compose-input-border-focused-rgb: var(--bg-5-rgb);
     --compose-panel-background: var(--bg-3);
     --compose-panel-background-rgb: var(--bg-3-rgb);
-    --compose-panel-background-hover: var(--ac-0);
-    --compose-panel-background-hover-rgb: var(--ac-0-rgb);
+    --compose-panel-background-hover: var(--bg-4);
+    --compose-panel-background-hover-rgb: var(--ac-4-rgb);
     --compose-primary: var(--fg-1);
     --compose-primary-rgb: var(--fg-1-rgb);
     --conversation-panel-background: var(--bg-1);
@@ -503,12 +503,12 @@
     --fg-0-rgb: 240,240,240;
     --fg-1: #eee !important;
     --fg-1-rgb: 238,238,238;
-    --fg-2: #e0e0e0 !important;
-    --fg-2-rgb: 224,224,224;
-    --fg-3: #d1d1d1 !important;
-    --fg-3-rgb: 209,209,209;
-    --fg-4: #b5b5b5 !important;
-    --fg-4-rgb: 181,181,181;
+    --fg-2: #d6d6d6 !important;
+    --fg-2-rgb: 214,214,214;
+    --fg-3: #bebebe !important;
+    --fg-3-rgb: 190,190,190;
+    --fg-4: #a7a7a7 !important;
+    --fg-4-rgb: 167,167,167;
     --fg-5: #8f8f8f !important;
     --fg-5-rgb: 143,143,143;
     --ac-0: #7289da !important;
@@ -564,15 +564,15 @@
   }
   html > body [data-asset-intro-image-dark],
   html > body [data-asset-intro-image-light] {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 240px;
+    max-height: 240px;
     background-image: var(--intro-image);
     transition: opacity 0.6s ease;
     border-radius: 0 !important;
   }
   html > body [data-asset-intro-image-dark] + div h1,
   html > body [data-asset-intro-image-light] + div h1 {
-    color: var(--fg-3) !important;
+    color: var(--fg-0) !important;
   }
   html > body [data-asset-intro-image-dark] + div h1 + div[class],
   html > body [data-asset-intro-image-light] + div h1 + div[class] {
