style: code cosmetics

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1208,9 +1208,9 @@ ac5 = var(--ac-5)
             if (fullscreen) { content: none i }
         }
 
-        /// Remove top border from the first Links/Docs message.
+        /// Right -> Remove top border from the first Links/Docs message.
         /div, /span {
-         div:first-child > .aGjYp::before { content: none }
+            div:first-child > .aGjYp::before { content: none }
         }
 
         /// Feat -> Input border radius.
@@ -1530,7 +1530,6 @@ ac5 = var(--ac-5)
             &-12 { c: magenta; filter: hue-rotate(20deg) }
             &-13 { c: red; filter: hue-rotate(20deg) }
             &-14 { c: orange; filter: hue-rotate(20deg) }
-            &-15 { c: yellow; filter: hue-rotate(20deg) }
             &-15 { c: blue; filter: hue-rotate(40deg) }
             &-16 { c: cyan; filter: hue-rotate(40deg) }
             &-17 { c: green; filter: hue-rotate(40deg) }
@@ -1554,7 +1553,6 @@ ac5 = var(--ac-5)
             &-12 { c: 0 0 magenta; filter: hue-rotate(20deg) }
             &-13 { c: 0 0 red; filter: hue-rotate(20deg) }
             &-14 { c: 0 0 orange; filter: hue-rotate(20deg) }
-            &-15 { c: 0 0 yellow; filter: hue-rotate(20deg) }
             &-15 { c: 0 0 blue; filter: hue-rotate(40deg) }
             &-16 { c: 0 0 cyan; filter: hue-rotate(40deg) }
             &-17 { c: 0 0 green; filter: hue-rotate(40deg) }
