--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1714,7 +1714,10 @@ ac5 = var(--ac-5)
 
     // Main -> Chat message bubbles.
     .message {
-        md = ''
+        /// 1, 2:    External video/link
+        /// 3, 4, 5: Reply, Gif, Document
+        /// 6, 7:    Grouped image/video
+        md = '._1t3gq, .SjSeX, ._2iML2, ._15rLL, ._3_4_I, .Yik3W, .va0ao'
         ts = ''
 
         /// Feat -> Message tails.
@@ -1766,10 +1769,14 @@ ac5 = var(--ac-5)
 
                 /// Fix rounded corners for forward button.
                 &:not(#z) { forward }:not(#z) { rad: _o i }
+
+                /// Fix rounded corners for videos/images in grouped media.
+                ._3sKvP:not(#z) { .va0ao, .Yik3W { rad: _o i }}
             }
 
             /// Incoming messages.
             &-in {
+                ._1ohds { border-top-right-radius: _m i }
                 /// First message -> In/Out/System messages.
                 &, ../-out, /{ system } {
                     &:not({ bubble }) + .message-in{ bubble } {
@@ -1794,6 +1801,7 @@ ac5 = var(--ac-5)
 
             /// Outgoing messages.
             &-out {
+                ._1ohds { border-top-right-radius: _o i }
                 /// First message -> In/Out/System messages.
                 &, ../-in, /{ system } {
                     &:not({ bubble }) + .message-out{ bubble } {
@@ -1808,6 +1816,8 @@ ac5 = var(--ac-5)
                     // c: 0 0 #55ff551a;
                     { md } { rad: right_med }
                     > div > div { rad: right_mid }
+                    /// Context menu.
+                    ._1ohds { border-top-right-radius: _i i }
                 }
                 /// Last message.
                 &{ bubble } + .message-out:not({ bubble }) {
