--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1751,7 +1751,7 @@ ac5 = var(--ac-5)
 
             /// Helpers.
             bubble  = '._28DtS'
-            system  = '._2qhWD'
+            system  = '._9WQEN'
             sticker = '._3ToB1'
             forward = '._29g--'
 
