chat: fix rounded corners for messages with media

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1764,6 +1764,9 @@ ac5 = var(--ac-5)
                 &:not({ bubble }) > div > div { rad: _o i }
                 &:not({ bubble }) { sticker } { rad: _o i }
 
+                /// Fix rounded corners for single message.
+                &:not({ bubble }) { md } { rad: _o i }
+
                 /// Fix rounded corners for forward button.
                 &:not(#z) { forward }:not(#z) { rad: _o i }
 
