chat: exclude grouped media in shared styles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1775,7 +1775,7 @@ ac5 = var(--ac-5)
                 &:not(#z) { forward }:not(#z) { rad: _o i }
 
                 /// Fix rounded corners for videos/images in grouped media.
-                ._3sKvP:not(#z) { .va0ao, .Yik3W { rad: _o i }}
+                ._3sKvP:not(._269XL) { .va0ao, .Yik3W { rad: _o i }}
 
                 /// Rounded timestamps.
                 { ts } { rad: 18px i }
