chat: fix text content opacity in RTL layout

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1719,7 +1719,7 @@ ac5 = var(--ac-5)
         /// 1:   Messages
         /// 2:   Videos
         /// 3-5: Images/gifs/stickers
-        ts = '.VGBA3, .video-thumb + div, ._3yTyY, ._2CHFo, ._1nrJA'
+        ts = '.VGBA3, .video-thumb + ._2DfqO, ._3yTyY, ._2CHFo, ._1nrJA'
 
         /// Feat -> Message tails.
         if (tail_style == 'fb-like') {
