chat: equalize left/right padding for msg bubbles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1777,6 +1777,14 @@ ac5 = var(--ac-5)
                 /// Fix rounded corners for videos/images in grouped media.
                 &:not(#z) ._269XL._3sKvP.wQZ0F { .va0ao, .Yik3W { rad: _o i }}
 
+                /// Increase padding-right for bubbles.
+                &:not(.serpP) ._274yw {
+                    padding-right: 9px i
+
+                    /// Fix margin for replies.
+                    ._3AFCK { margin-right: -6px }
+                }
+
                 /// Rounded timestamps.
                 { ts } { rad: 18px i }
             }
