chat: fix 'only admins can send msg' alert

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1489,6 +1489,12 @@ ac5 = var(--ac-5)
             /// Remove double-border from an unknown contact.
             ._2k-2Z { border-top: none }
 
+            /// Groups -> Only admins can send messages.
+            ._3ge3i {
+                border-top: 1px solid bg5 i
+                border-left: @border-top
+            }
+
             /// Emoji quick-picker.
             [data-list-scroll-container] {
                 border-bottom: 1px solid bg5 i
