vars: fix colors for 'x not connected' alert

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -421,14 +421,14 @@ ac5 = var(--ac-5)
         --butterbar-battery-secondary-rgb: var(--fg-4-rgb) //241,241,242;
         --butterbar-connection-background: mix(BG, yellow, 75%) //#febc2c;
         --butterbar-connection-background-rgb: to_rgb(mix(BG, yellow, 75%)) //254,188,44;
-        --butterbar-connection-primary: var(--bg-3) //#1c282ff5;
-        --butterbar-connection-primary-rgb: var(--bg-3-rgb) //28,40,47;
-        --butterbar-connection-secondary: var(--bg-3) //#1c282fd9;
-        --butterbar-connection-secondary-rgb: var(--bg-3-rgb) //28,40,47;
+        --butterbar-connection-primary: var(--fg-0) //#1c282ff5;
+        --butterbar-connection-primary-rgb: var(--fg-0-rgb) //28,40,47;
+        --butterbar-connection-secondary: var(--fg-4) //#1c282fd9;
+        --butterbar-connection-secondary-rgb: var(--fg-4-rgb) //28,40,47;
         --butterbar-default-background: mix(BG, blue, 70%) //#39c;
         --butterbar-default-background-rgb: to_rgb(mix(BG, blue, 70%)) //51,153,204;
-        --butterbar-icon: var(--fg-1) //#f1f1f2cc;
-        --butterbar-icon-rgb: var(--fg-1-rgb) //241,241,242;
+        --butterbar-icon: var(--bg-2) //#f1f1f2cc;
+        --butterbar-icon-rgb: var(--bg-2-rgb) //241,241,242;
         --butterbar-notification-icon: var(--blue) //#8eb2be;
         --butterbar-notification-icon-rgb: var(--blue-rgb) //142,178,190;
         --butterbar-primary: var(--fg-0) //#f1f1f2f5;
