global: simplify userstyle toggle names

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -29,14 +29,14 @@
 @var text     radius-i   'Rounded corners for input area' 24px
 @var range    radius-a   'Rounded corners for avatars' [50, 0, 50, 1, '%']
 @var text     app_width  'App width' 1396px
-@var checkbox fullscreen 'Enable fullscreen mode' 0
-@var checkbox app_c_m    'Enable compact mode' 1
+@var checkbox fullscreen 'Fullscreen mode' 0
+@var checkbox app_c_m    'Compact mode' 1
 @var text     app_c_m_w  'Compact mode breakpoint' 720px
 @var text     app_c_m_h  'Compact mode hover-on delay' 0.6s
 @var text     app_c_m_d  'Compact mode hover-off delay' 1.2s
 
-@var checkbox chat_b_c   'Enable blurred contacts' 0
-@var checkbox app_c_h    'Enable consistent drawer headers' 1
+@var checkbox chat_b_c   'Blurred contacts' 0
+@var checkbox app_c_h    'Consistent drawer headers' 1
 @var select   alerts     'Alerts' {
     'Show all                   *': 'show          ',
     'Hide "Allow notifications"  ': 'notifications ',
@@ -65,7 +65,7 @@
 
 @var checkbox ff_scroll  'Thin scrollbars in Firefox' 1
 
-@var checkbox chat_bg    'Enable chat background image' 1
+@var checkbox chat_bg    'Chat background image' 1
 @var text     chat_image 'Chat background image link' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
 @var range    chat_bg_o  'Chat background image opacity' [0.15, 0.0, 1, 0.01]
 @var range    chat_bg_iv 'Chat background image inverted colors' [0.6, 0.0, 1, 0.01]
@@ -90,7 +90,7 @@
 @var checkbox fb_compact 'Collapse messages when `fb-like` tail style and `RTL` tweaks are enabled' 1
 @var checkbox emoji_b    'Decrease height of big emojis when `fb-like` tail style and `RTL` tweaks are acctive' 1
 
-@var checkbox chat_b_img 'Enable blurred images/videos' 0
+@var checkbox chat_b_img 'Blurred images/videos' 0
 @var text     chat_b_in  'Images/videos hover-on delay' 0.4s
 @var text     chat_b_out 'Images/videos hover-off delay' 0.2s
 
